# Email-finder-desktop-

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: build-app.yml
emailfinder/: __init__.py  __main__.py  bulk.py  cli.py  disposable.py  dns_check.py  finder.py  http_client.py  models.py  names.py  patterns.py  scoring.py  scraper.py  verifiers.py
examples/: sample.csv
gui/: __init__.py  app.py
tests/: test_core.py
